...
            "value": "Aufnehmen"
          }
        },
        "ar": {
          "stringUnit": {
            "state": "translated",
            "value": "تسجيل"
          }
        },
        "hi": {
          "stringUnit": {
            "state": "translated",
            "value": "रिकॉर्ड करें"
...
            "state": "translated",
            "value": "กำลังบันทึก"
          }
        }
      }
    },
    "Settings": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Settings"
          }
        },
        "ko": {
          "stringUnit": {
            "state": "translated",
            "value": "설정"
          }
        },
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "設定"
...
            "value": "Einstellungen"
          }
        },
        "ar": {
          "stringUnit": {
            "state": "translated",
            "value": "الإعدادات"
          }
        },
        "hi": {
          "stringUnit": {
            "state": "translated",
            "value": "सेटिंग"
...
